# simple-web-flask

./: README.md  docker-compose.yaml  sonar-project.properties
.github/workflows/: bandit-defectdojo.yml  build.yml  cd.yaml  ci.yaml  security-scan.yml
app/: Dockerfile  app.py  pyproject.toml  requirements.txt
app/templates/: index.html  login.html  signup.html
db/: Dockerfile  init.sql
